# ATOM

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  GarfieldParticle.cpp  GarfieldParticle.h  GarfieldPhysics.cpp  GarfieldPhysics.h  README.md  auto_commit.sh  config.h.in  entryCalculator_copy.cpp  experiment.py  first.htm  graph_draw.cpp  script.js  style.css  temp.cpp  threshold.py  threshold_config.py
Data/: SL1F2AX.csv  clustersize_entry.csv  collimator_area.csv  collimator_area_high_cut.csv  collimator_area_low_cut.csv  entry.csv  entry_1.csv  experiment.csv  experiment_alpha.csv  experiment_entry.csv  g4data.csv  geant_simulation_1mm_1phi.root  simulation_entry.csv  simulation_entry_old.csv  threshold.csv  time_scale.csv  vis.mac
Data/old/: collimator_area.csv  experiment_alpha.csv  incident_angle.csv  incident_angle_and_entry.csv  threshold.csv  time_scale.csv
Data/storage/: entry_simulation_high_cut.csv  entry_simulation_old.csv  entry_simulation_scatter.csv
chip/src/: TDecoder.cpp
cmake/modules/: AtomBuildOptions.cmake
config/: ANALYSIS_PLOT_DEFAULT.conf  Analysis_config.conf  Config.cfg  Config_vcasn45_ithr50.cfg  Config_vcasn45_ithr55.cfg  Config_vcasn45_ithr60.cfg  Config_vcasn46_ithr50.cfg  Config_vcasn46_ithr55.cfg  Config_vcasn46_ithr60.cfg  Config_vcasn47_ithr50.cfg  Config_vcasn47_ithr55.cfg  Config_vcasn47_ithr60.cfg  Config_vcasn48_ithr50.cfg  Config_vcasn48_ithr55.cfg  Config_vcasn48_ithr60.cfg  Config_vcasn49_ithr50.cfg  Config_vcasn49_ithr55.cfg  Config_vcasn49_ithr60.cfg  Config_vcasn50_ithr50.cfg  Config_vcasn50_ithr55.cfg  Config_vcasn50_ithr60.cfg  Config_vcasn51_ithr50.cfg  Config_vcasn51_ithr55.cfg  Config_vcasn51_ithr60.cfg  Config_vcasn52_ithr50.cfg  Config_vcasn52_ithr55.cfg  Config_vcasn52_ithr60.cfg  Config_vcasn53_ithr50.cfg  Config_vcasn53_ithr55.cfg  Config_vcasn53_ithr60.cfg  Config_vcasn54_ithr50.cfg  Config_vcasn54_ithr55.cfg  Config_vcasn54_ithr60.cfg  Config_vcasn55_ithr50.cfg  Config_vcasn55_ithr55.cfg  Config_vcasn55_ithr60.cfg  EXPERIMENT_INFORMATION.csv  GEANT4_PLOT_DEFAULT.conf  Systematic.conf  experiment_analysing_double_1phi.conf  (+6 more)
config/1mm_1phi_alphagamma/: masking_plot.conf
config/1mm_1phi_gamma/: analysis_plot.conf  masking_plot.conf
config/1mm_2phi_alphagamma/: photo.conf
config/1mm_3phi_alphagamma/: merge.conf
config/1mm_3phi_gamma/: analysis.conf  merge.conf
config/1mm_7phi_alphagamma/: analysis_plot.conf  masking.conf  photo.conf
config/1mm_7phi_gamma/: masking.conf
config/20mm_2phi_alphagamma/: masking.conf  masking_plot.conf
config/20mm_2phi_gamma/: analysis.conf
config/20mm_3phi_alphagamma/: merge.conf
config/20mm_4phi_alphagamma/: masking_plot.conf
config/20mm_7phi_alphagamma/: masking.conf
config/20mm_7phi_gamma/: analysis.conf
config/3mm_2phi_alphagamma/: masking.conf
config/3mm_2phi_gamma/: masking_plot.conf  merge.conf
config/3mm_3phi_alphagamma/: masking_plot.conf  merge.conf
config/3mm_4phi_alphagamma/: analysis_plot.conf
config/3mm_4phi_gamma/: analysis_plot.conf  masking_plot.conf
config/3mm_7phi_gamma/: masking_plot.conf
config/7mm_2phi_alphagamma/: analysis_plot.conf
config/7mm_4phi_alphagamma/: masking.conf  merge.conf
config/7mm_4phi_gamma/: analysis.conf  analysis_plot.conf
config/7mm_7phi_gamma/: analysis.conf  masking_plot.conf
config/comparison/: Final_plot.conf  comparison.conf  comparison_1mm_alpha_gamma.conf  comparison_1mm_gamma_time.conf  comparison_1mm_time.conf  comparison_20mm_calibration.conf  comparison_20mm_gamma_time.conf  comparison_20mm_time.conf  comparison_2phi_gamma_time.conf  comparison_3mm_calibration.conf  comparison_3mm_gamma_time.conf  comparison_3mm_time.conf  comparison_3phi_gamma_time.conf  comparison_4phi_gamma_time.conf  comparison_7mm_calibration.conf  comparison_7mm_gamma_time.conf  comparison_7mm_time.conf  comparison_7phi_gamma_time.conf  file_list.csv  (+3 more)
docs/: Doxyfile.in
exe/: CMakeLists.txt  CompareExperimentData.cpp  CompareThresholdData.cpp  ComparisonDepositEnergy.cpp  ComparisonExperimentSimulation.cpp  ComparisonLength.cpp  ComparisonMonocollimator.cpp  ExperimentAlphaEntry.cpp  ExperimentAnalysis.cpp  ExperimentAnalysis.hpp  ExperimentAnalysisPlot.cpp  ExperimentComparison.cpp  ExperimentMasking.cpp  ExperimentMerge.cpp  ExperimentPloting.cpp  G4DoubleCluster.cpp  G4Simulation.cpp  G4SimulationAlphaEntry.cpp  G4SimulationAnalysis.cpp  G4SimulationAnalysisSecondary.cpp  G4SimulationComparison.cpp  G4SimulationExtract.cpp  G4SimulationPlot.cpp  G4SimulationSecondData.cpp  G4Systematic.cpp  Merge.cpp  SimulationAnalysis.cpp  ThrAna.cpp  ThresholdAnalysis.cpp  ThresholdPlot.cpp  alpide_dac.cpp  apts_gain_decoder.cpp  apts_source_decoder.cpp  default.cpp  entrySimulation.cpp  entrySimulation_old.cpp  gain_decoder.cpp  manager.cpp  photo.cpp  simulResult.cpp  (+5 more)
exe/old/: CompareCollimatorArea.cpp  CompareEntry.cpp  CompareRegion.cpp  ComparisonDepositEnergy.cpp  ComparisonGeant4.cpp  ExperimentAlphaEntry.cpp  G4DoubleCluster.cpp  G4SimulationAlphaEntry.cpp  G4SimulationComparison.cpp  G4SimulationSecondData.cpp  G4Systematic.cpp  GarfieldSimulation.cpp  ThrPede.cpp  alpide_dac.cpp  alpide_hitmap.cpp  entrySimulation.cpp  photo.cpp  simulation copy.cpp  temp_incident.cpp
include/: Decoder.h  DetectorConstruction.h  Headers.h  TALPIDE.h  TAPTS.h  TAPTSDecoder.h  TAnalyser.h  TFileFormat.h  alpide_decoder.h  apts_decoder.h  calibration.h  constant.h  cppUnit.h  cppargs.h  cppconfig.h  database.h  decoder.h  event.h  frame.h  gain_decoder.h  myjson.h  pitch_clock.h
module/: config.h
scripts/: analysis.sh  analysis_plot.sh  clustersize_alpha.sh  full_scan.sh  g4analysis.sh  g4extract.sh  g4plot.sh  g4simulation.sh  g4systematic.sh
src/: Decoder.cpp  DetectorConstruction.cpp  TALPIDE.cpp  TAPTS.cpp  TAnalyser.cpp  alpide_decoder.cpp  apts_decoder.cpp  calibration.cpp  cppTimer.cpp  cppUnit.cpp  cppargs.cpp  cppconfig.cpp  cpptqdm.cpp  decoder.cpp  frame.cpp  gain_decoder.cpp  myjson.cpp  pitch_clock.cpp
trashcan/: TClusterAnalyser.cpp  TClusterAnalyser.h  TClusterShapeAnalyser.cpp  TClusterShapeAnalyser.h
(+689 files in other folders)
